--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
     <div id="adminPanel" class="admin-container hidden">
         <!-- ... (código do painel admin permanece o mesmo) ... -->
     </div>
-
+<a href="admin.html">adm</a>
    <script>
     // Dados de exemplo dos produtos
     let products = [
