--- a/index.html
+++ b/index.html
@@ -784,6 +784,7 @@
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="#about">Sobre Nós</a></li>
                     <li><a href="#contact">Contato</a></li>
+                    <li><a href="admin.html">Area do ADM</a></li>
                 </ul>
             </div>
            
@@ -797,7 +798,7 @@
     <div id="adminPanel" class="admin-container hidden">
         <!-- ... (código do painel admin permanece o mesmo) ... -->
     </div>
-    <a href="admin.html">adm</a>
+    
    <script>
     // Dados de exemplo dos produtos
     let products = [
