--- a/admin.html
+++ b/admin.html
@@ -153,7 +153,8 @@
                 <h1 class="text-xl font-bold text-gray-800">Cadastro de Produtos</h1>
             </div>
             <div class="flex items-center space-x-4">
-                <a href="index.html" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg text-sm">Sair <i class="fas fa-sign-out-alt ml-1"></i></a>
+                
+                <a href="index.html">Sair </a>
             </div>
         </header>
 
@@ -205,8 +206,8 @@
                                 <img id="imagePreview" class="max-h-40 rounded-lg" onerror="this.style.display='none'">
                             </div>
                             <div class="text-center">
-                                <a href="https://imgur.com/upload" target="_blank" class="text-blue-500 hover:text-blue-700 text-sm">
-                                    <i class="fas fa-external-link-alt mr-1"></i> Hospedar imagem no Imgur
+                                <a href="https://postimages.org" target="_blank" class="text-blue-500 hover:text-blue-700 text-sm">
+                                    <i class="fas fa-external-link-alt mr-1"></i> Hospedar imagem no Postimages
                                 </a>
                                 <p class="text-xs text-gray-500 mt-1">Insira uma URL válida para a imagem</p>
                             </div>
