--- a/admin.html
+++ b/admin.html
@@ -117,6 +117,16 @@
             flex-wrap: wrap;
             gap: 4px;
         }
+        .price-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 12px;
+        }
+        @media (max-width: 640px) {
+            .price-container {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body class="bg-gray-100">
@@ -173,10 +183,22 @@
                     </div>
                     
                     <div class="mb-4">
-                        <label for="productPrice" class="block text-sm font-medium text-gray-700 mb-1">Preço*</label>
-                        <div class="relative">
-                            <span class="absolute left-3 top-2">R$</span>
-                            <input type="number" id="productPrice" step="0.01" min="0.01" class="w-full border border-gray-300 rounded-lg px-8 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                        <label class="block text-sm font-medium text-gray-700 mb-1">Preços*</label>
+                        <div class="price-container">
+                            <div>
+                                <label for="productPrice" class="block text-xs text-gray-600 mb-1">À vista (Dinheiro/PIX)*</label>
+                                <div class="relative">
+                                    <span class="absolute left-3 top-2">R$</span>
+                                    <input type="number" id="productPrice" step="0.01" min="0.01" class="w-full border border-gray-300 rounded-lg px-8 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                                </div>
+                            </div>
+                            <div>
+                                <label for="productCardPrice" class="block text-xs text-gray-600 mb-1">No cartão*</label>
+                                <div class="relative">
+                                    <span class="absolute left-3 top-2">R$</span>
+                                    <input type="number" id="productCardPrice" step="0.01" min="0.01" class="w-full border border-gray-300 rounded-lg px-8 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     
@@ -254,7 +276,8 @@
                             <tr>
                                 <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Imagem</th>
                                 <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Nome</th>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Preço</th>
+                                <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Preço à vista</th>
+                                <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Preço no cartão</th>
                                 <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Categoria</th>
                                 <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Ações</th>
                             </tr>
@@ -306,6 +329,7 @@
         productForm: document.getElementById('productForm'),
         productName: document.getElementById('productName'),
         productPrice: document.getElementById('productPrice'),
+        productCardPrice: document.getElementById('productCardPrice'),
         productCategory: document.getElementById('productCategory'),
         imageUrl: document.getElementById('imageUrl'),
         imagePreview: document.getElementById('imagePreview'),
@@ -374,7 +398,11 @@
             }
 
             if (isNaN(productData.price) || productData.price <= 0) {
-                errors.push('Preço deve ser um valor maior que zero');
+                errors.push('Preço à vista deve ser um valor maior que zero');
+            }
+
+            if (isNaN(productData.cardPrice) || productData.cardPrice <= 0) {
+                errors.push('Preço no cartão deve ser um valor maior que zero');
             }
 
             if (!productData.category) {
@@ -434,6 +462,7 @@
                 const productToSave = {
                     name: productData.name,
                     price: parseFloat(productData.price),
+                    cardPrice: parseFloat(productData.cardPrice),
                     category: productData.category,
                     imageUrl: productData.imageUrl,
                     updatedAt: firebase.firestore.FieldValue.serverTimestamp()
@@ -495,6 +524,8 @@
                             id: doc.id,
                             name: data.name,
                             price: data.price,
+                            // Para compatibilidade com produtos antigos que não têm cardPrice
+                            cardPrice: data.cardPrice || data.price,
                             category: data.category,
                             imageUrl: data.imageUrl,
                             createdAt: data.createdAt,
@@ -553,6 +584,9 @@
                         <div class="text-sm text-gray-900">${utils.formatPrice(product.price)}</div>
                     </td>
                     <td class="px-4 py-4 whitespace-nowrap">
+                        <div class="text-sm text-gray-900">${utils.formatPrice(product.cardPrice)}</div>
+                    </td>
+                    <td class="px-4 py-4 whitespace-nowrap">
                         <div class="text-sm text-gray-900">${utils.translateCategory(product.category)}</div>
                     </td>
                     <td class="px-4 py-4 whitespace-nowrap text-sm text-gray-500">
@@ -596,6 +630,7 @@
             state.editingProductId = productId;
             elements.productName.value = product.name;
             elements.productPrice.value = product.price;
+            elements.productCardPrice.value = product.cardPrice;
             elements.productCategory.value = product.category;
             elements.imageUrl.value = product.imageUrl;
             elements.imagePreview.src = product.imageUrl;
@@ -635,6 +670,7 @@
             const productData = {
                 name: elements.productName.value.trim(),
                 price: parseFloat(elements.productPrice.value),
+                cardPrice: parseFloat(elements.productCardPrice.value),
                 category: elements.productCategory.value,
                 imageUrl: elements.imageUrl.value.trim()
             };
